--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,12 @@ img {
     }
 }
 
+@media screen and (max-width: 576px) {
+    .link-custom{
+        font-size: 13px;
+    }
+}
+
 .btn{
     padding: 12px 28px;
     font-weight: 700;
@@ -142,7 +148,7 @@ img {
     background-color: var(--color-brand);
     position: absolute;
     left: 0;
-    top: 110%;
+    top: 100%;
     transition: all 0.4s;
 }
 
